Fixed wrapping and GitHub image

--- a/styles.css
+++ b/styles.css
@@ -309,7 +309,7 @@ Full-Width Styles
   z-index: 10;
   padding: 10px 50px 10px 10px;
   color: #fff;
-  background: url('../images/blacktocat.png') #0090ff no-repeat 95% 50%;
+  background: url('blacktocat.png') #0090ff no-repeat 95% 50%;
   font-weight: 700;
   box-shadow: 0 0 10px rgba(0,0,0,.5);
   border-bottom-left-radius: 5px;
@@ -916,8 +916,18 @@ Small Device Styles
 *******************************************************************************/
 
 @media screen and (max-width: 700px) {
-    dl.inline2 dt, dl.inline2b dt {width: 60%}
-    dl.inline2 dd, dl.inline2b dd {width: 40%}
+    dl.inline2 dt, dl.inline2d dt {width: 60%}
+    dl.inline2 dd, dl.inline2d dd {width: 40%}
+}
+
+@media screen and (max-width: 800px) {
+    dl.inline dt, dl.inline dd {
+      margin-left: 0em;
+      margin-right: 0em;
+    }
+    dl.inline dt.asl {
+      white-space: break-spaces;
+    }
 }
 
 @media screen and (max-width: 480px) {
